# M-elli-Clone

./: .gitignore  README.md
Frontend/: .dockerignore  .gitlab-ci.yml  Dockerfile.frontend  README.md
Frontend/muelli-frontend/: .prettierrc  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.cjs  server.js  vite.config.js
Frontend/muelli-frontend/e2e/: example.spec.js
Frontend/muelli-frontend/helperfunctions/: constructPath.js
Frontend/muelli-frontend/src/: map.js  mapToggle.js  style.css  styles.js  websocket.js
Frontend/muelli-frontend/src/maphelpers/: IconTrashcan.js
Frontend/tests-examples/: demo-todo-app.spec.md
articles/: Primo_BibTeX_Export.bib
data/: docker_metrics_Campus.csv  docker_metrics_Garching.csv
edge/: .clang-format  .dockerignore  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile.coap  Dockerfile.deps  README.md  main.cpp  runApp.sh
edge/CoAPServer/: CoAPServer.cpp
edge/build-support/: convert-target  zig-cc  zig-cxx
edge/debounce/: debounce.h
edge/idDecoder/: id_decoder.cpp  id_decoder.h
edge/jsonHelpers/: jsonHelpers.cpp  jsonHelpers.h
edgegnode/: .gitignore  .gitlab-ci.yml  Dockerfile.edge  readme.md  settings.gradle.kts
edgegnode/app/: build.gradle.kts
edgegnode/app/data/: Campus_28012025_.geojson  Campus_28012025_.json  Garching1_11012025_.json  Garching_11012025_.geojson  resGarching.json
edgegnode/app/src/main/java/org/EdgeApp/: EdgeApp.java  GNode.java  GNodeGraph.java  HttpPathSender.java  MetaDataHelper.java  ShortestPathFinder.java  subCycleFinder.java
edgegnode/app/src/test/java/org/EdgeApp/: EdgeAppTest.java  GNodeGraphTest.java  GnodeTest.java  ShortestPathFinderTest.java
iot/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  README.md  flake.nix
iot/components/lib/: CMakeLists.txt  lib.c
iot/components/lib/include/: lib.h
iot/main/: CMakeLists.txt  main.c
iot/test/: CMakeLists.txt  lib_test.cpp
test/: failsafe.sh  reset.sh  routingExample.sh  runner.sh  simul1.sh  simul2.sh
